--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,11 @@ html {
 }
 
 body {
-	background-color:#000000;
+	background-color:#fcfbfb;
 	font-family:"Gill Sans",Lato,"Helvetica Neue",Helvetica,sans-serif;
 	margin:0;
 	padding:0;
-	background: url(../images/newbg4.jpg) no-repeat center center fixed; 
+	background: url(../images/newbg4.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -25,10 +25,18 @@ p {
 	/*background-image:url(../images/background_dark2.png);*/
 	margin-left:auto;
 	margin-right:auto;
-	margin-top:70px;
+	margin-top:128px;
 	margin-bottom:80px;
 	position:relative;
 	background-image:url(../images/alpha.png);
+}
+
+#top_logo {
+	position:absolute;
+	top:10px;
+	z-index:-1;
+	margin-left:-100px;
+	left:50%;
 }
 
 /*h1 {
