--- a/css/styles.css
+++ b/css/styles.css
@@ -336,6 +336,9 @@ img {
 }
 
 #copyright {
+	background-color:#3b3b3b;
+	opacity:0.7;
+	padding:3px;
 	position:absolute;
 	right:0px;
 	bottom:-20px;
